force-app/main/default/objects/Shipping_Line_Item__c/Shipping_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Shipping Line Item</label>
    <nameField>
        <label>Shipping Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>