force-app/main/default/objects/Shipping_Line_Item__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Shipping Line Items</relationshipLabel>
    <relationshipName>Shipping_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>