force-app/main/default/objects/Shipping_Line_Item__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <formula>Shipping_Line__r.Shipping_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>