force-app/main/default/objects/Shipping_Line_Item__c/fields/Shipping_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Line__c</fullName>
    <label>Shipping Line</label>
    <referenceTo>Shipping_Line__c</referenceTo>
    <relationshipLabel>Shipping Line Items</relationshipLabel>
    <relationshipName>Shipping_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>